@@ -43,6 +43,8 @@ ViSP 3.0.1 (in development)
     . [#68] Visual C++ 2010 unable to build modules\core\test\math\testMath.cpp
     . [#69] Unable to build ViSP under Windows without OpenCV 3rdparty
     . [#75] visp.pc pkgconfig file is corrupted by optimized and debug keywords
+    . [#77] vpAROgre: wrong resources / plugins default path when used from
+            ROS installation
 
 ----------------------------------------------
 ViSP 3.0.0 (released December 18th, 2015)
